Add healthchecks ui

--- a/NatoursApi/appsettings.json
+++ b/NatoursApi/appsettings.json
@@ -38,5 +38,14 @@
       "https://localhost:7001",
       "https://app.mydomain.com"
     ]
+  },
+  "HealthChecksUI": {
+    "HealthChecks": [
+      {
+        "Name": "Natours API",
+        "Uri": "/healthz"
+      }
+    ],
+    "EvaluationTimeInSeconds": 5
   }
 }
