--- a/NatoursApi/NatoursApi.csproj
+++ b/NatoursApi/NatoursApi.csproj
@@ -10,7 +10,9 @@
         <PackageReference Include="Asp.Versioning.Mvc"/>
         <PackageReference Include="Asp.Versioning.Mvc.ApiExplorer"/>
         <PackageReference Include="AspNetCore.HealthChecks.NpgSql"/>
+        <PackageReference Include="AspNetCore.HealthChecks.UI"/>
         <PackageReference Include="AspNetCore.HealthChecks.UI.Client"/>
+        <PackageReference Include="AspNetCore.HealthChecks.UI.InMemory.Storage"/>
         <PackageReference Include="FluentValidation"/>
         <PackageReference Include="FluentValidation.DependencyInjectionExtensions"/>
         <PackageReference Include="Mapster"/>
