--- a/NatoursApi.Domain/NatoursApi.Domain.csproj
+++ b/NatoursApi.Domain/NatoursApi.Domain.csproj
@@ -8,6 +8,7 @@
 
     <ItemGroup>
         <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions"/>
+        <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore"/>
     </ItemGroup>
 
 </Project>
